module(
    name = "albatross",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_swiftnav", version = "0.19.0")
git_override(
    module_name = "rules_swiftnav",
    commit = "a1a8da8d191e2e743611018236ac886a7c77041d",
    remote = "https://github.com/swift-nav/rules_swiftnav.git",
)

bazel_dep(name = "llvm", version = "0.8.3")

register_toolchains("@llvm//toolchain:all")

osx = use_extension("@llvm//extensions:osx.bzl", "osx")
osx.from_archive(
    sha256 = "edc7ce9b8f09e0c7a39aaa714f941b4c2597f333ec1ffe59a14d67eb36cdb7e7",
    strip_prefix = "Payload/Library/Developer/CommandLineTools/SDKs/MacOSX26.4.sdk",
    type = "pkg",
    urls = [
        "https://swcdn.apple.com/content/downloads/60/13/122-35686-A_30JUXWIJFR/ck0gzuw5qccefzm3ptlwou3pu6a55d0o02/CLTools_macOSNMOS_SDK.pkg",
        "https://web.archive.org/web/20260430051604/https://swcdn.apple.com/content/downloads/60/13/122-35686-A_30JUXWIJFR/ck0gzuw5qccefzm3ptlwou3pu6a55d0o02/CLTools_macOSNMOS_SDK.pkg",
    ],
)
osx.frameworks(names = [
    "Accelerate",
    "Foundation",
    "CoreFoundation",
])
use_repo(osx, "macos_sdk")

bazel_dep(name = "eigen", version = "3.3.swiftnav.1")
local_path_override(
    module_name = "eigen",
    path = "third_party/eigen",
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "84b1fd42b09ec026eb69d54b25a447a3b0d7d80f",
    remote = "https://github.com/swift-nav/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "variant", version = "0.1.0.swiftnav")
local_path_override(
    module_name = "variant",
    path = "third_party/variant",
)

bazel_dep(name = "fast-cpp-csv-parser", version = "0.1.0.swiftnav", repo_name = "fast_csv")
local_path_override(
    module_name = "fast-cpp-csv-parser",
    path = "third_party/fast-cpp-csv-parser",
)

bazel_dep(name = "googletest", version = "1.16.0.bcr.2", repo_name = "gtest")
single_version_override(
    module_name = "googletest",
    version = "1.16.0.bcr.2",
)

bazel_dep(name = "cereal", version = "1.3.2.bcr.3")
bazel_dep(name = "zlib", version = "1.3.1.bcr.5")
bazel_dep(name = "gzip_hpp", version = "0.1.0.swiftnav", repo_name = "gzip")
local_path_override(
    module_name = "gzip_hpp",
    path = "third_party/gzip-hpp",
)

bazel_dep(name = "zstd", version = "1.5.5.bcr.2")
bazel_dep(name = "threadpool", version = "0.1.1.swiftnav", repo_name = "ThreadPool")
local_path_override(
    module_name = "threadpool",
    path = "third_party/ThreadPool",
)

bazel_dep(name = "suitesparse", version = "7.1.0.swiftnav.3")
bazel_dep(name = "gflags", version = "2.2.2.swiftnav")
local_path_override(
    module_name = "gflags",
    path = "third_party/googleflags",
)

bazel_dep(name = "nlopt", version = "2.6.1.4.swiftnav")
local_path_override(
    module_name = "nlopt",
    path = "third_party/nlopt",
)

bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
